# database-pandas-profiler

./: Makefile  README.md  pyproject.toml
data_explorer/: main.py
pandas_database_profiler/: main.py
tests/: test_data_explorer.py
