[tool.poetry]
name = "data_explorer"
version = "0.1.0"
description = ""
authors = ["Alex Viana <->"]

[tool.poetry.dependencies]
python = "^3.8"
pandas-profiling = "^2.11.0"
streamlit = "^0.80.0"
SQLAlchemy = "^1.4.11"
watchdog = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
